--- a/restaurant/src/main/resources/templates/client/goodsPage.html
+++ b/restaurant/src/main/resources/templates/client/goodsPage.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>菜品列表 FOOD CATEGORY</title>
+    <title>FOOD CATEGORY</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}" href="../../static/layui/css/layui.css"
           media="all"/>
     <style>
@@ -103,9 +103,8 @@
         Jquery = $;
         var pageSize = 10;
         flow.load({
-            elem: '#content' //流加载容器
-            , done: function (pageNum, next) { //执行下一页的回调
-                //模拟数据插入
+            elem: '#content' 
+            , done: function (pageNum, next) { 
                 setTimeout(function () {
                     var lis = [];
                     console.log("pageNum", pageNum);
@@ -128,10 +127,10 @@
                                 });
                                 var pages = parseInt(((res.count - 1) / pageSize)) + 1;
                                 console.log("pages", pages);
-                                next(lis.join(''), pageNum < pages); //假设总页数为 10
+                                next(lis.join(''), pageNum < pages); 
                             } else {
                                 layer.alert(res.msg, {
-                                    title: '提交结果'
+                                    title: 'Submit'
                                     , anim: 6
                                 });
                             }
@@ -155,16 +154,12 @@
                         return html;
                     }
 
-                    //执行下一页渲染，第二参数为：满足“加载更多”的条件，即后面仍有分页
-                    //pages为Ajax返回的总页数，只有当前页小于总页数的情况下，才会继续出现加载更多
                 }, 500);
             }
         })
-        //flow.lazyimg();
-        //给body下的所有 .chickClick 动态添加点击事件
         $("body").on("click", ".chickClick", function (e) {
             var goodsItem = $(this).parents(".goods-item")[0];
-            var soldState = $(goodsItem).find("input[name='soldState']").val();//售馨
+            var soldState = $(goodsItem).find("input[name='soldState']").val();
             console.log("soldState", soldState);
             if (soldState == '1') {
                 layer.msg("SOLD OUT！", {icon: 5});
