--- a/restaurant/src/main/resources/templates/cook/cookTaskList.html
+++ b/restaurant/src/main/resources/templates/cook/cookTaskList.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>制菜任务表 Dish to Cook</title>
+    <title>Dish to Cook</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}"
           href="../../static/layuiadmin/layui/css/layui.css"
           media="all"/>
@@ -18,10 +18,9 @@
 <body>
 <div class="layui-card">
     <div class="layui-card-header" style="text-align: center">
-        制菜任务列表 List of Dish Cooking
+        List of Dish Cooking
     </div>
     <div class="layui-card-body">
-        <!--右边工具栏-->
         <script th:inline="javascript" type="text/html" id="barDemo">
            {{#
                 if([[${role.roleId}]]==2){
@@ -43,11 +42,11 @@
            {{#
            if(d.status==0){
            }}
-           <a class="layui-btn layui-btn-disabled">开始烹饪 Start Cooking</a>
+           <a class="layui-btn layui-btn-disabled">Start Cooking</a>
            {{#
            }else if(d.status==1){
            }}
-           <a class="layui-btn layui-btn-disabled">完成烹饪 Finish Cooking</a>
+           <a class="layui-btn layui-btn-disabled">Finish Cooking</a>
            {{#
            }
            }}
@@ -55,7 +54,6 @@
                 }
            }}
         </script>
-        <!-- table表格-->
         <table id="tableList" lay-filter="tableList">
 
         </table>
@@ -63,7 +61,7 @@
             {{#
             if( d.goods.imgUrl==null||d.goods.imgUrl=='')
             { }}
-            <div style="color:red">无图片 N/A</div>
+            <div style="color:red">N/A</div>
             {{#  } else { }}
             <img src="/restaurant/{{d.goods.imgUrl}}" class="laytable-cell-1-imgUrl">
             {{#  } }}
@@ -72,11 +70,11 @@
             {{#
             if( d.status==0){
             }}
-            <div style="color: red">等待烹饪 Wait to Cooking</div>
+            <div style="color: red">Wait to Cooking</div>
             {{#
             } else if(d.status==1){
             }}
-            <div style="color:#5FB878;">正在烹饪 Cooking</div>
+            <div style="color:#5FB878;">Cooking</div>
             {{#
                 }
             }}
@@ -89,35 +87,33 @@
         var $ = layui.$
             , form = layui.form
             , table = layui.table
-        //执行一个 table 实例
         table.render({
             elem: '#tableList'
-            , url: "/restaurant/service/cookTask.do" //数据接口
+            , url: "/restaurant/service/cookTask.do" 
             , title: '订单明细'
-            , even: true//开启背景隔行
+            , even: true
             , request: {
-                pageName: 'pageNum' //页码的参数名称，默认：page
-                , limitName: 'pageSize' //每页数据量的参数名，默认：limit
+                pageName: 'pageNum' 
+                , limitName: 'pageSize' 
             }
             , response: {
                 statusCode: 200
             }
             ,size:'lg'
-            , toolbar: '#test-table-toolbar-toolbarDemo' //开启工具栏，此处显示默认图标
-            , cols: [[ //表头
+            , toolbar: '#test-table-toolbar-toolbarDemo' 
+            , cols: [[ 
                   {field: 'odList', title:'ID', align: 'center', cellMinWidth: 60, fixed: 'left', sort: true,templet:'<div>{{d.odIdList}}</div>',hide:true}
-                , {field: 'imgUrl', title: '菜品图片 Photo',align:'center', cellMinWidth:120, templet:'#imgUrl'}
-                , {field: 'goodsName', title: '菜品名 Food Name',align:'center', cellMinWidth: 150, sort: true,templet:'<div>{{d.goods.goodsName}}</div>'}
-                , {field: 'count', title: '数量 XXX',align:'center', cellMinWidth: 100,sort:true,templet:'<div style="color:#FF5722">{{d.count}}份</div>'}
-                , {field: 'goodsCategory', title: '菜品类型 Type', align:'center',cellMinWidth: 100, templet: '<div>{{d.goods.goodsCategory.categoryName}}</div>'}
-                , {field: 'status', title: '制作状态 Cooking Status',align:'center', cellMinWidth: 100,sort: true,templet:"#status"}
-                , {fixed: 'right', title: "工具栏 Toolbar",align:'center', cellMinWidth:300, toolbar: '#barDemo'}
+                , {field: 'imgUrl', title: 'Photo',align:'center', cellMinWidth:120, templet:'#imgUrl'}
+                , {field: 'goodsName', title: 'Food Name',align:'center', cellMinWidth: 150, sort: true,templet:'<div>{{d.goods.goodsName}}</div>'}
+                , {field: 'count', title: 'Quantity',align:'center', cellMinWidth: 100,sort:true,templet:'<div style="color:#FF5722">{{d.count}}份</div>'}
+                , {field: 'goodsCategory', title: 'Type', align:'center',cellMinWidth: 100, templet: '<div>{{d.goods.goodsCategory.categoryName}}</div>'}
+                , {field: 'status', title: 'Cooking Status',align:'center', cellMinWidth: 100,sort: true,templet:"#status"}
+                , {fixed: 'right', title: "Toolbar",align:'center', cellMinWidth:300, toolbar: '#barDemo'}
             ]]
         });
-        //监听行工具事件
-        table.on('tool(tableList)', function (obj) { //注：tool 是工具条事件名，test 是 table 原始容器的属性 lay-filter="对应的值"
-            var data = obj.data //获得当前行数据
-                , layEvent = obj.event; //获得 lay-event 对应的值
+        table.on('tool(tableList)', function (obj) { 
+            var data = obj.data 
+                , layEvent = obj.event; 
             if (layEvent === 'startCode') {
                 console.log("odIdList",data.odIdList);
                 $.ajax({
@@ -128,10 +124,10 @@
                     success: function (result) {
                         if (result.code == 200) {
                             table.reload("tableList");
-                            layer.msg('成功!', {icon: 1});
+                            layer.msg('Successful!', {icon: 1});
                         } else {
                             layer.alert(result.msg, {
-                                title: '提交结果'
+                                title: 'Submit'
                                 , anim: 6
                             });
                         }
@@ -147,10 +143,10 @@
                     success: function (result) {
                         if (result.code == 200) {
                             table.reload("tableList");
-                            layer.msg('成功!', {icon: 1});
+                            layer.msg('Successful!', {icon: 1});
                         } else {
                             layer.alert(result.msg, {
-                                title: '提交结果'
+                                title: 'Submit'
                                 , anim: 6
                             });
                         }
