--- a/restaurant/src/main/resources/templates/cook/deskServingStatus.html
+++ b/restaurant/src/main/resources/templates/cook/deskServingStatus.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>桌位上菜情况表 Table Dish Status</title>
+    <title>Table Dish Status</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}"
           href="../../static/layuiadmin/layui/css/layui.css"
           media="all"/>
@@ -28,12 +28,12 @@
             </div>
             <div class="layui-inline">
                 <div class="layui-input-inline" style="width: 170px">
-                    <label class="layui-form-label" style="width:60px;padding: 9px 0px">完成状态 Status</label>
+                    <label class="layui-form-label" style="width:60px;padding: 9px 0px">Status</label>
                     <div class="layui-input-block" style="margin-left:70px;">
                         <select name="finishStatus">
-                            <option value="">不限 N/A</option>
-                            <option value="0">未完成 Not Finish</option>
-                            <option value="1">已完成 Finish</option>
+                            <option value="">N/A</option>
+                            <option value="0">Not Finish</option>
+                            <option value="1"> Finish</option>
                         </select>
                     </div>
                 </div>
@@ -48,21 +48,19 @@
         </div>
     </div>
     <div class="layui-card-body">
-        <!-- table表格-->
         <table id="tableList" lay-filter="tableList"></table>
-        <!--右边工具栏-->
         <script th:inline="javascript" type="text/html" id="barDemo">
-            <a class="layui-btn layui-btn-xs" lay-event="viewDetail">查看详情 Details</a>
+            <a class="layui-btn layui-btn-xs" lay-event="viewDetail">Details</a>
         </script>
         <script type="text/html" id="payStatus_templet">
             {{#
             if(d.payStatus==0){
             }}
-            <div style="color: #FF1744;">未付款 Not Pay</div>
+            <div style="color: #FF1744;">Not Pay</div>
             {{#
             }else{
             }}
-            <div style="color:#5FB878;">已付款 Paid</div>
+            <div style="color:#5FB878;">Paid</div>
             {{#
             }
             }}
@@ -71,11 +69,11 @@
             {{#
             if(d.finishStatus==0){
             }}
-            <div style="color: #FF1744;">未完成 Not Finish </div>
+            <div style="color: #FF1744;">Not Finish </div>
             {{#
             }else{
             }}
-            <div style="color:#5FB878;">已完成 Finish</div>
+            <div style="color:#5FB878;">Finish</div>
             {{#
             }
             }}
@@ -103,47 +101,45 @@
             , table = layui.table
             , laydate = layui.laydate;
 
-        //执行一个 table 实例
         table.render({
             elem: '#tableList'
-            , url: "/restaurant/service/dssList.do" //数据接口
+            , url: "/restaurant/service/dssList.do" 
             , method: 'post'
             , request: {
-                pageName: 'pageNum' //页码的参数名称，默认：page
-                , limitName: 'pageSize' //每页数据量的参数名，默认：limit
+                pageName: 'pageNum'
+                , limitName: 'pageSize'
             }
             , response: {
                 statusCode: 200
             }
             , limits: [2, 5, 10, 20, 30]
             , title: '桌位上菜情况表'
-            , page: true //开启分页
-            , even: true//开启背景隔行
+            , page: true 
+            , even: true
             , height: 500
-            //,size:"lg"设置表格尺寸
-            , toolbar: '#test-table-toolbar-toolbarDemo' //开启工具栏，此处显示默认图标，可以自定义模板，详见文档
-            , cols: [[ //表头
+            //,size:"lg"
+            , toolbar: '#test-table-toolbar-toolbarDemo' 
+            , cols: [[ 
                 , {field: 'orderId', title: 'ID', align: 'center', cellMinWidth: 70, sort: true, fixed: 'left', sort: true, hide: true}
-                , {field: 'deskCode', title: '桌号 Table No.', align: 'center', cellMinWidth: 120,sort:true}
-                , {field: 'peopleNum', title: '人数 People', align: 'center', cellMinWidth: 120}
-                , {field: 'payStatus', title: '付款状态 Pay Status', align: 'center', cellMinWidth:120, templet: "#payStatus_templet"}
-                , {field: 'finishStatus', title: '上菜完成状态 Dish Status', align: 'center', cellMinWidth: 160, templet: "#finishStatus_templet"}
-                , {field: 'totalPrice', title: '总金额 Total Prices', align: 'center', cellMinWidth: 140, sort: true,templet:'<div>{{d.totalPrice}}元</div>'}
-                , {field: 'createTime', title: '创建时间 Creating Date', cellMinWidth: 170,sort: true,templet:'<div>{{d.createTime}}</div>'}
-                , {field: 'modifyTime', title: '修改时间 Editing Date', cellMinWidth: 170,sort: true,templet:'#modifyTime_templet'}
-                , {fixed: 'right', title: "工具栏 Toolbar",align:'center', cellMinWidth: 220, toolbar: '#barDemo'}
+                , {field: 'deskCode', title: 'Table No.', align: 'center', cellMinWidth: 120,sort:true}
+                , {field: 'peopleNum', title: 'People', align: 'center', cellMinWidth: 120}
+                , {field: 'payStatus', title: 'Pay Status', align: 'center', cellMinWidth:120, templet: "#payStatus_templet"}
+                , {field: 'finishStatus', title: 'Dish Status', align: 'center', cellMinWidth: 160, templet: "#finishStatus_templet"}
+                , {field: 'totalPrice', title: 'Total Prices', align: 'center', cellMinWidth: 140, sort: true,templet:'<div>{{d.totalPrice}}元</div>'}
+                , {field: 'createTime', title: 'Creating Date', cellMinWidth: 170,sort: true,templet:'<div>{{d.createTime}}</div>'}
+                , {field: 'modifyTime', title: 'Editing Date', cellMinWidth: 170,sort: true,templet:'#modifyTime_templet'}
+                , {fixed: 'right', title: "Toolbar",align:'center', cellMinWidth: 220, toolbar: '#barDemo'}
             ]]
         });
 
-        //监听行工具事件
-        table.on('tool(tableList)', function (obj) { //注：tool 是工具条事件名，test 是 table 原始容器的属性 lay-filter="对应的值"
-            var data = obj.data //获得当前行数据
-                , layEvent = obj.event; //获得 lay-event 对应的值
+        table.on('tool(tableList)', function (obj) { 
+            var data = obj.data 
+                , layEvent = obj.event; 
             if (layEvent === 'viewDetail') {
                 var url = "/restaurant/service/ssd.html/" + data.orderId;
                 layer.open({
                     type: 2
-                    , title: '详细情况'
+                    , title: 'Details'
                     , content: url
                     , maxmin: true
                     , anim: 1
@@ -151,14 +147,14 @@
                 });
             }
         });
-        //监听搜索
+
         form.on('submit(Search)', function (data) {
             var field = data.field;
-            //执行重载
+
             table.reload('tableList', {
                 where: field
                 , page: {
-                    curr: 1 //重新从第 1 页开始
+                    curr: 1 
                 }
             });
         });
