--- a/restaurant/src/main/resources/templates/cook/servingStatusDetail.html
+++ b/restaurant/src/main/resources/templates/cook/servingStatusDetail.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>详细情况 Details</title>
+    <title>Details</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}"
           href="../../static/layuiadmin/layui/css/layui.css"
           media="all"/>
@@ -18,13 +18,11 @@
 <body>
 <div class="layui-card">
     <div class="layui-card-body">
-        <!--头部工具栏-->
         <script type="text/html" id="test-table-toolbar-toolbarDemo">
             <div class="layui-btn-container">
 
             </div>
         </script>
-        <!-- table表格-->
         <table id="tableList" lay-filter="tableList">
 
         </table>
@@ -32,7 +30,7 @@
             {{#
             if( d.goods.imgUrl==null||d.goods.imgUrl=='')
             { }}
-            <div style="color:red">无图片 N/A</div>
+            <div style="color:red">N/A</div>
             {{#  } else { }}
             <img src="/restaurant/{{d.goods.imgUrl}}" class="laytable-cell-1-imgUrl">
             {{#  } }}
@@ -41,19 +39,19 @@
             {{#
                 if( d.status==0){
             }}
-                <div style="color: #01AAED">等待烹饪 Wait to Cooking</div>
+                <div style="color: #01AAED">Wait to Cooking</div>
             {{#
                 } else if(d.status==1){
             }}
-                <div style="color: #FFB800">正在烹饪 Cooking</div>
+                <div style="color: #FFB800">Cooking</div>
             {{#
                 } else if(d.status==2){
             }}
-                <div style="color: #FF5722">等待上菜 Wait to Serve</div>
+                <div style="color: #FF5722">Wait to Serve</div>
             {{#
                 } else if(d.status==3){
             }}
-                <div style="color:#5FB878">上菜完成 Served</div>
+                <div style="color:#5FB878">Served</div>
             {{#
                 }
             }}
@@ -68,12 +66,12 @@
             , table = layui.table
         table.render({
             elem: '#tableList'
-            , url: "/restaurant/service/ssd.do/[[${orderId}]]" //数据接口
-            , title: '详细情况'
-            , even: true//开启背景隔行
+            , url: "/restaurant/service/ssd.do/[[${orderId}]]" 
+            , title: 'Details'
+            , even: true
             , request: {
-                pageName: 'pageNum' //页码的参数名称，默认：page
-                , limitName: 'pageSize' //每页数据量的参数名，默认：limit
+                pageName: 'pageNum' 
+                , limitName: 'pageSize' 
             }
             , response: {
                 statusCode: 200
@@ -82,15 +80,15 @@
             , page: true
             ,height:395
             ,size:'lg'
-            , toolbar: '#test-table-toolbar-toolbarDemo' //开启工具栏，此处显示默认图标
-            , cols: [[ //表头
+            , toolbar: '#test-table-toolbar-toolbarDemo' 
+            , cols: [[ 
                  {field: 'odId', title:'ID', align: 'center', cellMinWidth: 60, fixed: 'left', sort: true,templet:'<div>{{d.odId}}</div>',hide:true}
-                , {field: 'goodsName', title: '菜品名 Food Name',align:'center', cellMinWidth: 150, sort: true,templet:'<div>{{d.goods.goodsName}}</div>'}
-                , {field: 'imgUrl', title: '菜品图片 Food Photo',align:'center', cellMinWidth:120, templet:'#imgUrl'}
-                , {field: 'goodsCategory', title: '菜品类型 Food Type', align:'center',cellMinWidth: 100, templet: '<div>{{d.goods.goodsCategory.categoryName}}</div>'}
-                , {field: 'price', title: '价格 Prices',align:'center', cellMinWidth: 100,sort: true,templet:'<div>{{d.goods.price}}元</div>'}
-                , {field: 'count', title: '数量 Quantity',align:'center', cellMinWidth: 100,sort:true,templet:'<div>{{d.count}}份</div>'}
-                , {field: 'status', title: '制作状态 Cooking Status',align:'center', cellMinWidth: 100,sort: true,templet:"#status"}
+                , {field: 'goodsName', title: 'Food Name',align:'center', cellMinWidth: 150, sort: true,templet:'<div>{{d.goods.goodsName}}</div>'}
+                , {field: 'imgUrl', title: 'Food Photo',align:'center', cellMinWidth:120, templet:'#imgUrl'}
+                , {field: 'goodsCategory', title: 'Food Type', align:'center',cellMinWidth: 100, templet: '<div>{{d.goods.goodsCategory.categoryName}}</div>'}
+                , {field: 'price', title: 'Prices',align:'center', cellMinWidth: 100,sort: true,templet:'<div>{{d.goods.price}}元</div>'}
+                , {field: 'count', title: 'Quantity',align:'center', cellMinWidth: 100,sort:true,templet:'<div>{{d.count}}份</div>'}
+                , {field: 'status', title: 'Cooking Status',align:'center', cellMinWidth: 100,sort: true,templet:"#status"}
                 ]]
         });
     });
