--- a/restaurant/src/main/resources/templates/counter/counter.html
+++ b/restaurant/src/main/resources/templates/counter/counter.html
@@ -500,28 +500,28 @@
             , form = layui.form
             , laydate = layui.laydate;
         $("input[type=text]").change(function () {
-            //非数字
+            
             if (isNaN($(this).val())) {
                 $(this).val("");
             }
-            //正数
+        
             if (!/^[0-9]+.?[0-9]*$/.test($(this).val())) {
                 $(this).val("");
             }
         });
 
         $("#truly-pay").change(function () {
-            //正整数
+            
             if (/^[0-9]+.?[0-9]*$/.test($(this).val())) {
                 var counterItem3Node = $(this).parents(".counter-item3-left")[0];
-                //实付金额
+                
                 var trulyMoney = parseFloat($(this).val());
-                //应付金额
+                
                 var mustPay = parseFloat($(counterItem3Node).find(".must-pay").text());
                 if (mustPay == 0) {
                     return;
                 }
-                //找零
+                
                 var changeMoney = (trulyMoney - mustPay).toFixed(2);
                 if (changeMoney < 0) {
                     $(this).val("");
@@ -536,7 +536,6 @@
             if (deskCode == '') {
                 return;
             }
-            //先清空界面
             clearAll();
             $.ajax({
                 url: '/restaurant/order/findDetail.do'
@@ -552,11 +551,10 @@
                             return;
                         }
                         console.log("data", res.data);
-                        //加载订单商品视图
                         loadView(res.data);
                     } else {
                         layer.alert(res.msg, {
-                            title: '提交结果'
+                            title: 'Submit!'
                             , anim: 6
                         });
                     }
@@ -568,7 +566,7 @@
             if (memberCode == '') {
                 return;
             }
-            //验证手机号
+            
             if (!/^[1][3,4,5,7,8][0-9]{9}$/.test(memberCode)) {
                 $("#memberCode").val("");
                 layer.msg("Incorrect Member Number Format!", {icon: 5});
@@ -586,14 +584,14 @@
                     if (res.code == 200) {
                         console.log("data", res.data);
                         if (res.data == null) {
-                            layer.msg("We dont find the correspond Member!", {icon: 2});
+                            layer.msg("We dont find the corresponding Member!", {icon: 2});
                             $("#memberCode").val("");
                             return;
                         }
                         loadMemberInfo(res.data);
                     } else {
                         layer.alert(res.msg, {
-                            title: '提交结果'
+                            title: 'Submit!'
                             , anim: 6
                         });
                     }
@@ -603,20 +601,20 @@
         $("#register").click(function () {
             layer.open({
                 type: 2
-                , title: '注册会员'
+                , title: 'Register Member'
                 , content: '/restaurant/member/add.html'
                 , maxmin: true
                 , area: ['700px', '430px']
-                , btn: ['确定', '取消']
+                , btn: ['Confrim', 'Cancel']
                 , yes: function (index, layero) {
                     var iframeWindow = window['layui-layer-iframe' + index]
-                        //该id是窗口打开html页面中表单提交按钮的id
+                       
                         , submitID = 'LAY-user-front-submit'
                         , submit = layero.find('iframe').contents().find('#' + submitID);
-                    //监听提交
+                    
                     iframeWindow.layui.form.on('submit(' + submitID + ')', function (data) {
-                        var field = data.field; //获取提交的字段
-                        //提交 Ajax 成功后，静态更新表格中的数据
+                        var field = data.field; 
+                        
                         $.ajax({
                             url: "/restaurant/member/add.do",
                             type: "post",
@@ -626,11 +624,11 @@
                                 if (result.code == 200) {
                                     $("#memberCode").val(data.field.memberCode);
                                     $("#member-button").click();
-                                    layer.close(index); //关闭弹层
+                                    layer.close(index); 
                                     layer.msg("Registered Success! ", {icon: 1});
                                 } else {
                                     layer.alert(result.msg, {
-                                        title: '提交结果'
+                                        title: 'Submit'
                                         , anim: 6
                                     });
                                 }
@@ -642,7 +640,7 @@
             });
         });
         $("#commit").click(function () {
-            //结算函数
+            
             settleAccounts();
         });
 
@@ -650,13 +648,13 @@
          * 加载左边商品明细视图
          */
         function loadView(data) {
-            //加载明细商品列表
+            
             for (var i = 0; i < data.length; i++) {
                 loadGoodsItemView(data[i]);
             }
-            //订单号
+            
             $(".orderCode").text(data[0].order.orderCode);
-            //桌号
+            
             $(".deskCode").text(data[0].order.deskCode);
             $(".totalPrice").text(parseFloat(data[0].order.totalPrice).toFixed(2));
             $(".totalMoney").text(parseFloat(data[0].order.totalPrice).toFixed(2));
@@ -664,7 +662,6 @@
         }
 
         /**
-         * 加载一项商品的视图
          * @param data
          */
         function loadGoodsItemView(data) {
@@ -678,14 +675,12 @@
         }
 
         /**
-         * 加载会员信息
          * @param data
          */
         function loadMemberInfo(data) {
             $(".member-name").text(data.name);
             $(".member-category").text(data.memberCategory.mcName);
             $(".discount").text(parseFloat(data.memberCategory.discount) * 10 + "折");
-            //消费金额
             var totalMoney = parseFloat($(".totalMoney").text());
             var discountMoney = (totalMoney * (1 - data.memberCategory.discount)).toFixed(2);
             $(".discount-money").text(discountMoney);
@@ -693,7 +688,6 @@
         }
 
         /**
-         * 清空所有数据
          */
         function clearAll() {
             $("#items").empty();
@@ -715,7 +709,6 @@
             $(".must-pay").text($(".totalMoney").text());
         }
         /**
-         * 结算函数
          */
         function settleAccounts(){
             if($(".orderCode").text()==''){
@@ -723,7 +716,7 @@
             }
             if ($("#truly-pay").val() == '') {
                 layer.alert("Please type the Amount Paid!", {
-                    title: '警告'
+                    title: 'Warning!'
                     , anim: 6
                 });
                 return;
@@ -731,18 +724,18 @@
             var data;
             var order = {};
             var member = {};
-            //会员号
+            
             member.memberCode = $("#memberCode").val();
             order.member = member;
-            //应付金额
+            
             order.mustPay = parseFloat($(".must-pay").text());
-            //实付金额
+        
             order.actualPay = parseFloat($("#truly-pay").val());
-            //找零
+           
             order.changeMoney = parseFloat($("#change-money").text());
-            //打折金额
+            
             order.discountMoney = parseFloat($(".discount-money").text());
-            //订单号
+            
             order.orderCode = $(".orderCode").text();
             data = JSON.stringify(order);
             console.log("data", data);
@@ -759,12 +752,12 @@
                            $("#deskCode").val("");
                            $("#memberCode").val("");
                            $("#truly-pay").val("");
-                            //重载当前页面
+                            
                             location.reload();
                         },1000);
                     }else{
                         layer.alert(res.msg,{
-                            title: '信息'
+                            title: 'Message!'
                             , anim: 6
                         });
                     }
