--- a/restaurant/src/main/resources/templates/desk/add.html
+++ b/restaurant/src/main/resources/templates/desk/add.html
@@ -54,21 +54,19 @@
         var $ = layui.$
             , form = layui.form
 
-        //获取from表单提交事件
-        //此处submit中的值是lay-filter
         form.on('submit(component-form-element)', function (data) {
         });
-        //自定义验证
+
         form.verify({
-            //验证正数
+
             positive_number: function (value, item) {
                 if (parseFloat(value) < 0) {
-                    return '必须为正数';
+                    return 'Must be positive number!';
                 }
             },
             int_number: function (value, item) {
                 if (!/^(0|\+?[1-9][0-9]*)$/.test(value)) {
-                    return '必须为正整数';
+                    return 'Must be positive integer!';
                 }
             }
         });
