--- a/restaurant/src/main/resources/templates/chart/salesVolume.html
+++ b/restaurant/src/main/resources/templates/chart/salesVolume.html
@@ -88,7 +88,9 @@
     layui.use(['table', 'laydate'], function () {
         var $ = layui.$;
         var form = layui.form;
+        //默认初始化近七天的销量排行
         chart1NetworkRequest(6);
+        //默认初始化近七天的菜系销量统计
         chart2NetworkRequest(6);
 
         form.on('select(chart1Day)', function (data) {
@@ -100,6 +102,9 @@
             chart2NetworkRequest(day);
         });
 
+        /**
+         * 菜品销售排行网络请求数据
+         */
         function chart1NetworkRequest(day) {
             $.ajax({
                 url: '/restaurant/analysis/gssByDays.do',
@@ -126,6 +131,9 @@
             });
         }
 
+        /**
+         * 菜系销售分析网络请求数据
+         */
         function chart2NetworkRequest(day) {
             $.ajax({
                 url: '/restaurant/analysis/gcsByDays.do',
@@ -156,6 +164,7 @@
         }
     });
 
+    //加载柱状图表
     function loadChart1(nameArray, countArray) {
         require(
             [
@@ -164,11 +173,12 @@
                 'echarts/chart/bar'
             ],
             function (echarts) {
+                // 基于准备好的dom，初始化echarts图表
                 var myChart1 = echarts.init(document.getElementById('chart1'), 'macarons');
                 var option1 = {
                     title: {
-                        text: 'Best sell Top12',
-                        
+                        text: '菜品销量top12',
+                        // subtext: '纯属虚构'
                     },
                     tooltip: {
                         trigger: 'axis',
@@ -183,7 +193,7 @@
                         }
                     },
                     legend: {
-                        data: ['Sales']
+                        data: ['销量']
                     },
                     toolbox: {
                         show: true,
@@ -195,7 +205,9 @@
                         }
                     },
                     itemStyle: {
+                        //默认样式
                         normal: {
+                            //设置柱状条圆角
                             barBorderRadius: [12, 12, 12, 12],
                         }
                     },
@@ -219,27 +231,29 @@
                     ],
                     series: [
                         {
-                            name: 'Sales',
+                            name: '销量',
                             type: 'bar',
                             data: countArray,
                             markPoint: {
                                 data: [
-                                    {type: 'max', name: 'Maximum'},
-                                    {type: 'min', name: 'Minimum'}
+                                    {type: 'max', name: '最大值'},
+                                    {type: 'min', name: '最小值'}
                                 ]
                             },
                             markLine: {
                                 data: [
-                                    {type: 'average', name: 'Average'}
+                                    {type: 'average', name: '平均值'}
                                 ]
                             }
                         }
                     ]
                 };
+                // 为echarts对象加载数据
                 myChart1.setOption(option1);
             });
     }
 
+    //加载图表2 饼状图表
     function loadChart2(nameArray, countArray) {
         require(
             [
@@ -251,7 +265,8 @@
                 var myChart2 = echarts.init(document.getElementById('chart2'), 'macarons');
                 var option2 = {
                     title: {
-                        text: 'Order Sales Analysis',
+                        text: '菜系销量分析',
+                        //subtext: '纯属虚构',
                         x: 'center'
                     },
                     tooltip: {
@@ -287,7 +302,7 @@
                     calculable: false,
                     series: [
                         {
-                            name: 'Order',
+                            name: '菜系',
                             type: 'pie',
                             radius: '55%',
                             center: ['50%', '60%'],
