--- a/restaurant/src/main/resources/templates/client/myOrder.html
+++ b/restaurant/src/main/resources/templates/client/myOrder.html
@@ -18,9 +18,11 @@
 <body>
 <div class="layui-card">
     <div class="layui-card-body">
+        <!-- table表格-->
         <table id="tableList" lay-filter="tableList">
 
         </table>
+        <!--右边工具栏-->
         <script th:inline="javascript" type="text/html" id="barDemo">
             {{#
             if(d.status>0||d.order.payStatus==1){
@@ -75,12 +77,12 @@
             ,orderCode = [[${orderCode}]];
         table.render({
             elem: '#tableList'
-            , url: '/restaurant/guest/client/myOrder.do?orderCode='+orderCode
+            , url: '/restaurant/guest/client/myOrder.do?orderCode='+orderCode//数据接口
             , title: '已提交菜单'
-            , even: true
+            , even: true//开启背景隔行
             , request: {
-                pageName: 'pageNum' 
-                , limitName: 'pageSize' 
+                pageName: 'pageNum' //页码的参数名称，默认：page
+                , limitName: 'pageSize' //每页数据量的参数名，默认：limit
             }
             , response: {
                 statusCode: 200
@@ -90,22 +92,23 @@
             ,limit:6
             , page: true
             ,size:'lg'
-            , cols: [[ 
+            , cols: [[ //表头
                  {field: 'odId', title:'ID', align: 'center', cellMinWidth: 60, fixed: 'left', sort: true,templet:'<div>{{d.odId}}</div>',hide:true}
-                , {field: 'goodsName', title: 'Name of Dishes',align:'center', cellMinWidth: 150, sort: true,templet:'<div>{{d.goods.goodsName}}</div>'}
-                , {field: 'imgUrl', title: 'Photo of Dishes',align:'center', cellMinWidth:120, templet:'#imgUrl'}
-                , {field: 'goodsCategory', title: 'Type of Dishes', align:'center',cellMinWidth: 100, templet: '<div>{{d.goods.goodsCategory.categoryName}}</div>'}
-                , {field: 'price', title: 'Prices',align:'center', cellMinWidth: 100,sort: true,templet:'<div>{{d.goods.price}}元</div>'}
-                , {field: 'count', title: 'Quantity',align:'center', cellMinWidth: 100,sort:true,templet:'<div>{{d.count}}份</div>'}
-                , {field: 'status', title: 'Cooking Status',align:'center', cellMinWidth: 100,sort: true,templet:"#status"}
-                , {fixed: 'right', title: "Toolbar",align:'center', width: 120, toolbar: '#barDemo'}
+                , {field: 'goodsName', title: '菜品名',align:'center', cellMinWidth: 150, sort: true,templet:'<div>{{d.goods.goodsName}}</div>'}
+                , {field: 'imgUrl', title: '菜品图片',align:'center', cellMinWidth:120, templet:'#imgUrl'}
+                , {field: 'goodsCategory', title: '菜品类型', align:'center',cellMinWidth: 100, templet: '<div>{{d.goods.goodsCategory.categoryName}}</div>'}
+                , {field: 'price', title: '价格',align:'center', cellMinWidth: 100,sort: true,templet:'<div>{{d.goods.price}}元</div>'}
+                , {field: 'count', title: '数量',align:'center', cellMinWidth: 100,sort:true,templet:'<div>{{d.count}}份</div>'}
+                , {field: 'status', title: '制作状态',align:'center', cellMinWidth: 100,sort: true,templet:"#status"}
+                , {fixed: 'right', title: "工具栏",align:'center', width: 120, toolbar: '#barDemo'}
                 ]]
         });
-        table.on('tool(tableList)', function (obj) { 
-            var data = obj.data 
-                , layEvent = obj.event; 
+        //监听行工具事件
+        table.on('tool(tableList)', function (obj) { //注：tool 是工具条事件名，test 是 table 原始容器的属性 lay-filter="对应的值"
+            var data = obj.data //获得当前行数据
+                , layEvent = obj.event; //获得 lay-event 对应的值
             if (layEvent === 'del') {
-                layer.confirm('return the dishes?', function (index) {
+                layer.confirm('确定要退该菜?', function (index) {
                     $.ajax({
                         url: "/restaurant/guest/client/delGood.do",
                         type: "post",
@@ -113,11 +116,11 @@
                         data: {ids: data.odId},
                         success: function (result) {
                             if (result.code == 200) {
-                                obj.del(); 
-                                layer.msg('Successful!', {icon: 1});
+                                obj.del(); //删除对应行（tr）的DOM结构
+                                layer.msg('退菜成功!', {icon: 1});
                             } else {
                                 layer.alert(result.msg, {
-                                    title: 'Submit'
+                                    title: '提交结果'
                                     , anim: 6
                                 });
                             }
